@@ -43,4 +43,10 @@
       class=".facets.SearchFacetsView"
       permission="zope2.View" />
 
+  <browser:page
+      for="*"
+      name="suggest-terms"
+      class=".suggest.SuggestView"
+      permission="zope2.View"/>
+
 </configure>
